--- a/main.ipynb
+++ b/main.ipynb
@@ -2,36 +2,155 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "id": "e434519c-8e4d-4e91-a55a-680e1231c177",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([2, 1, 4, 3])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"Hello World\")"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn import preprocessing\n",
+    "\n",
+    "df = pd.read_csv(\"car_eval_train.csv\")\n",
+    "label_encoder =  preprocessing.LabelEncoder()\n",
+    "\n",
+    "buying_mapping = {\n",
+    "    'low': 1,\n",
+    "    'med': 2,\n",
+    "    'high': 3,\n",
+    "    'vhigh': 4\n",
+    "}\n",
+    "\n",
+    "df['buying'] = df['buying'].map(buying_mapping)\n",
+    "df['buying'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "551225f5-2a0a-483d-a7ac-6709d00b875e",
+   "execution_count": 65,
+   "id": "15ad0ceb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>buying</th>\n",
+       "      <th>maint</th>\n",
+       "      <th>doors</th>\n",
+       "      <th>persons</th>\n",
+       "      <th>lug_boot</th>\n",
+       "      <th>safety</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>med</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>med</td>\n",
+       "      <td>med</td>\n",
+       "      <td>acc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>high</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>small</td>\n",
+       "      <td>med</td>\n",
+       "      <td>unacc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>high</td>\n",
+       "      <td>5more</td>\n",
+       "      <td>more</td>\n",
+       "      <td>small</td>\n",
+       "      <td>med</td>\n",
+       "      <td>acc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>low</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>med</td>\n",
+       "      <td>high</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>low</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>small</td>\n",
+       "      <td>high</td>\n",
+       "      <td>unacc</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   buying maint  doors persons lug_boot safety  class\n",
+       "0       2   med      3       4      med    med    acc\n",
+       "1       2  high      3       2    small    med  unacc\n",
+       "2       1  high  5more    more    small    med    acc\n",
+       "3       2   low      2       4      med   high   good\n",
+       "4       4   low      3       2    small   high  unacc"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -43,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
