--- a/accidents.ipynb
+++ b/accidents.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "e434519c-8e4d-4e91-a55a-680e1231c177",
    "metadata": {},
    "outputs": [
@@ -18,6 +18,8 @@
     }
    ],
    "source": [
+    "#You need to add the 2 other files to use this yourself locally, they are too big to upload to github\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn import preprocessing\n",
