--- a/Car_Eval/main.ipynb
+++ b/Car_Eval/main.ipynb
@@ -2,21 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "e434519c-8e4d-4e91-a55a-680e1231c177",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 1, 4, 3])"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -32,13 +21,31 @@
     "    'vhigh': 4\n",
     "}\n",
     "\n",
+    "doors_mapping = {\n",
+    "    '1': 1,\n",
+    "    '2': 2,\n",
+    "    '3': 3,\n",
+    "    '4': 4,\n",
+    "    '5more': 5\n",
+    "}\n",
+    "\n",
+    "persons_mapping = {\n",
+    "    '1': 1,\n",
+    "    '2': 2,\n",
+    "    '3': 3,\n",
+    "    '4': 4,\n",
+    "    'more': 5\n",
+    "}\n",
+    "\n",
     "df['buying'] = df['buying'].map(buying_mapping)\n",
-    "df['buying'].unique()"
+    "df['maint'] = df['maint'].map(buying_mapping)\n",
+    "df['doors'] = df['doors'].map(doors_mapping)\n",
+    "df['persons'] = df['persons'].map(persons_mapping)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 79,
    "id": "15ad0ceb",
    "metadata": {},
    "outputs": [
@@ -76,9 +83,9 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2</td>\n",
-       "      <td>med</td>\n",
+       "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>4</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>med</td>\n",
        "      <td>med</td>\n",
        "      <td>acc</td>\n",
@@ -86,9 +93,9 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>high</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>small</td>\n",
        "      <td>med</td>\n",
        "      <td>unacc</td>\n",
@@ -96,9 +103,9 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
-       "      <td>high</td>\n",
-       "      <td>5more</td>\n",
-       "      <td>more</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>small</td>\n",
        "      <td>med</td>\n",
        "      <td>acc</td>\n",
@@ -106,9 +113,9 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2</td>\n",
-       "      <td>low</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>4</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>med</td>\n",
        "      <td>high</td>\n",
        "      <td>good</td>\n",
@@ -116,9 +123,9 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>low</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>small</td>\n",
        "      <td>high</td>\n",
        "      <td>unacc</td>\n",
@@ -128,15 +135,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   buying maint  doors persons lug_boot safety  class\n",
-       "0       2   med      3       4      med    med    acc\n",
-       "1       2  high      3       2    small    med  unacc\n",
-       "2       1  high  5more    more    small    med    acc\n",
-       "3       2   low      2       4      med   high   good\n",
-       "4       4   low      3       2    small   high  unacc"
+       "   buying  maint  doors  persons lug_boot safety  class\n",
+       "0       2      2      3      4.0      med    med    acc\n",
+       "1       2      3      3      2.0    small    med  unacc\n",
+       "2       1      3      5      NaN    small    med    acc\n",
+       "3       2      1      2      4.0      med   high   good\n",
+       "4       4      1      3      2.0    small   high  unacc"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
