--- a/Car_Eval/main.ipynb
+++ b/Car_Eval/main.ipynb
@@ -2,50 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e434519c-8e4d-4e91-a55a-680e1231c177",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn import preprocessing\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns \n",
     "\n",
-    "df = pd.read_csv(\"car_eval_train.csv\")\n",
-    "label_encoder =  preprocessing.LabelEncoder()\n",
-    "\n",
-    "buying_mapping = {\n",
-    "    'low': 1,\n",
-    "    'med': 2,\n",
-    "    'high': 3,\n",
-    "    'vhigh': 4\n",
-    "}\n",
-    "\n",
-    "doors_mapping = {\n",
-    "    '1': 1,\n",
-    "    '2': 2,\n",
-    "    '3': 3,\n",
-    "    '4': 4,\n",
-    "    '5more': 5\n",
-    "}\n",
-    "\n",
-    "persons_mapping = {\n",
-    "    '1': 1,\n",
-    "    '2': 2,\n",
-    "    '3': 3,\n",
-    "    '4': 4,\n",
-    "    'more': 5\n",
-    "}\n",
-    "\n",
-    "df['buying'] = df['buying'].map(buying_mapping)\n",
-    "df['maint'] = df['maint'].map(buying_mapping)\n",
-    "df['doors'] = df['doors'].map(doors_mapping)\n",
-    "df['persons'] = df['persons'].map(persons_mapping)"
+    "df = pd.read_csv(\"car_eval_train.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "id": "15ad0ceb",
    "metadata": {},
    "outputs": [
@@ -82,50 +54,50 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>med</td>\n",
+       "      <td>med</td>\n",
        "      <td>3</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>med</td>\n",
        "      <td>med</td>\n",
        "      <td>acc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>med</td>\n",
+       "      <td>high</td>\n",
+       "      <td>3</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>small</td>\n",
        "      <td>med</td>\n",
        "      <td>unacc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>low</td>\n",
+       "      <td>high</td>\n",
+       "      <td>5more</td>\n",
+       "      <td>more</td>\n",
        "      <td>small</td>\n",
        "      <td>med</td>\n",
        "      <td>acc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>med</td>\n",
+       "      <td>low</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>med</td>\n",
        "      <td>high</td>\n",
        "      <td>good</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
+       "      <td>vhigh</td>\n",
+       "      <td>low</td>\n",
        "      <td>3</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>2</td>\n",
        "      <td>small</td>\n",
        "      <td>high</td>\n",
        "      <td>unacc</td>\n",
@@ -135,21 +107,272 @@
        "</div>"
       ],
       "text/plain": [
-       "   buying  maint  doors  persons lug_boot safety  class\n",
-       "0       2      2      3      4.0      med    med    acc\n",
-       "1       2      3      3      2.0    small    med  unacc\n",
-       "2       1      3      5      NaN    small    med    acc\n",
-       "3       2      1      2      4.0      med   high   good\n",
-       "4       4      1      3      2.0    small   high  unacc"
+       "  buying maint  doors persons lug_boot safety  class\n",
+       "0    med   med      3       4      med    med    acc\n",
+       "1    med  high      3       2    small    med  unacc\n",
+       "2    low  high  5more    more    small    med    acc\n",
+       "3    med   low      2       4      med   high   good\n",
+       "4  vhigh   low      3       2    small   high  unacc"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21647221",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['buying', 'maint', 'doors', 'persons', 'lug_boot', 'safety']\n",
+      "buying: \n",
+      "['med' 'low' 'vhigh' 'high']\n",
+      "maint: \n",
+      "['med' 'high' 'low' 'vhigh']\n",
+      "doors: \n",
+      "['3' '5more' '2' '4']\n",
+      "persons: \n",
+      "['4' '2' 'more']\n",
+      "lug_boot: \n",
+      "['med' 'small' 'big']\n",
+      "safety: \n",
+      "['med' 'high' 'low']\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = list(df.columns.values[:-1])\n",
+    "print(names)\n",
+    "    \n",
+    "for item in names:\n",
+    "    uniqueVals = df[item].unique()\n",
+    "    print(item+\": \")\n",
+    "    print(uniqueVals)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e290f0b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "class\n",
+       "unacc    968\n",
+       "acc      307\n",
+       "good      55\n",
+       "vgood     52\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class_types = df.columns.values[-1]\n",
+    "df[class_types].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9acdf9f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\aathi\\AppData\\Local\\Temp\\ipykernel_8380\\489246097.py:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  df_en = df_en.replace({True: 1, False: 0})\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>class</th>\n",
+       "      <th>buying_low</th>\n",
+       "      <th>buying_med</th>\n",
+       "      <th>buying_vhigh</th>\n",
+       "      <th>maint_low</th>\n",
+       "      <th>maint_med</th>\n",
+       "      <th>maint_vhigh</th>\n",
+       "      <th>doors_3</th>\n",
+       "      <th>doors_4</th>\n",
+       "      <th>doors_5more</th>\n",
+       "      <th>persons_4</th>\n",
+       "      <th>persons_more</th>\n",
+       "      <th>lug_boot_med</th>\n",
+       "      <th>lug_boot_small</th>\n",
+       "      <th>safety_low</th>\n",
+       "      <th>safety_med</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>acc</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>unacc</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>acc</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>good</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>unacc</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   class  buying_low  buying_med  buying_vhigh  maint_low  maint_med  \\\n",
+       "0    acc           0           1             0          0          1   \n",
+       "1  unacc           0           1             0          0          0   \n",
+       "2    acc           1           0             0          0          0   \n",
+       "3   good           0           1             0          1          0   \n",
+       "4  unacc           0           0             1          1          0   \n",
+       "\n",
+       "   maint_vhigh  doors_3  doors_4  doors_5more  persons_4  persons_more  \\\n",
+       "0            0        1        0            0          1             0   \n",
+       "1            0        1        0            0          0             0   \n",
+       "2            0        0        0            1          0             1   \n",
+       "3            0        0        0            0          1             0   \n",
+       "4            0        1        0            0          0             0   \n",
+       "\n",
+       "   lug_boot_med  lug_boot_small  safety_low  safety_med  \n",
+       "0             1               0           0           1  \n",
+       "1             0               1           0           1  \n",
+       "2             0               1           0           1  \n",
+       "3             1               0           0           0  \n",
+       "4             0               1           0           0  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_en = pd.get_dummies(df, columns=names, drop_first=True)\n",
+    "df_en = df_en.replace({True: 1, False: 0})\n",
+    "df_en.head()"
    ]
   }
  ],
