Final encoded dataframe

--- a/Car_Eval/main.ipynb
+++ b/Car_Eval/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "id": "e434519c-8e4d-4e91-a55a-680e1231c177",
    "metadata": {},
    "outputs": [],
@@ -11,6 +11,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns \n",
+    "from sklearn import preprocessing\n",
+    "\n",
     "\n",
     "df = pd.read_csv(\"car_eval_train.csv\")"
    ]
@@ -190,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "id": "9acdf9f8",
    "metadata": {},
    "outputs": [
@@ -198,7 +200,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\aathi\\AppData\\Local\\Temp\\ipykernel_8380\\489246097.py:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\aathi\\AppData\\Local\\Temp\\ipykernel_8380\\481273140.py:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df_en = df_en.replace({True: 1, False: 0})\n"
      ]
     },
@@ -223,7 +225,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>class</th>\n",
        "      <th>buying_low</th>\n",
        "      <th>buying_med</th>\n",
        "      <th>buying_vhigh</th>\n",
@@ -239,12 +240,12 @@
        "      <th>lug_boot_small</th>\n",
        "      <th>safety_low</th>\n",
        "      <th>safety_med</th>\n",
+       "      <th>class</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>acc</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -259,11 +260,11 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>unacc</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -279,10 +280,10 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>acc</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -297,11 +298,11 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>good</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -317,10 +318,10 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>unacc</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -334,6 +335,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -342,29 +344,29 @@
        "</div>"
       ],
       "text/plain": [
-       "   class  buying_low  buying_med  buying_vhigh  maint_low  maint_med  \\\n",
-       "0    acc           0           1             0          0          1   \n",
-       "1  unacc           0           1             0          0          0   \n",
-       "2    acc           1           0             0          0          0   \n",
-       "3   good           0           1             0          1          0   \n",
-       "4  unacc           0           0             1          1          0   \n",
+       "   buying_low  buying_med  buying_vhigh  maint_low  maint_med  maint_vhigh  \\\n",
+       "0           0           1             0          0          1            0   \n",
+       "1           0           1             0          0          0            0   \n",
+       "2           1           0             0          0          0            0   \n",
+       "3           0           1             0          1          0            0   \n",
+       "4           0           0             1          1          0            0   \n",
        "\n",
-       "   maint_vhigh  doors_3  doors_4  doors_5more  persons_4  persons_more  \\\n",
-       "0            0        1        0            0          1             0   \n",
-       "1            0        1        0            0          0             0   \n",
-       "2            0        0        0            1          0             1   \n",
-       "3            0        0        0            0          1             0   \n",
-       "4            0        1        0            0          0             0   \n",
+       "   doors_3  doors_4  doors_5more  persons_4  persons_more  lug_boot_med  \\\n",
+       "0        1        0            0          1             0             1   \n",
+       "1        1        0            0          0             0             0   \n",
+       "2        0        0            1          0             1             0   \n",
+       "3        0        0            0          1             0             1   \n",
+       "4        1        0            0          0             0             0   \n",
        "\n",
-       "   lug_boot_med  lug_boot_small  safety_low  safety_med  \n",
-       "0             1               0           0           1  \n",
-       "1             0               1           0           1  \n",
-       "2             0               1           0           1  \n",
-       "3             1               0           0           0  \n",
-       "4             0               1           0           0  "
+       "   lug_boot_small  safety_low  safety_med  class  \n",
+       "0               0           0           1      1  \n",
+       "1               1           0           1      0  \n",
+       "2               1           0           1      1  \n",
+       "3               0           0           0      2  \n",
+       "4               1           0           0      0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,6 +374,16 @@
    "source": [
     "df_en = pd.get_dummies(df, columns=names, drop_first=True)\n",
     "df_en = df_en.replace({True: 1, False: 0})\n",
+    "class_mapping = {\"unacc\": 0,\n",
+    "                 \"acc\": 1,\n",
+    "                 \"good\": 2,\n",
+    "                 \"vgood\": 3}\n",
+    "df_en['class'] = df_en['class'].map(class_mapping)\n",
+    "\n",
+    "class_col = df_en['class']\n",
+    "df_en.drop(columns=['class'], inplace=True)\n",
+    "last_col_pos = df_en.columns.get_loc('safety_med') + 1\n",
+    "df_en.insert(last_col_pos, 'class', class_col)\n",
     "df_en.head()"
    ]
   }
