Upadte issue stuff

--- a/Car_Eval/main.ipynb
+++ b/Car_Eval/main.ipynb
@@ -416,7 +416,7 @@
     "import numpy as np\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
     "from sklearn.model_selection import train_test_split, cross_val_score\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
     "\n",
     "# Assume df_en is your one-hot encoded DataFrame with a 'class' target column.\n",
     "X = df_en.drop(columns=[\"class\"])  # Features\n",
@@ -434,10 +434,6 @@
     "    random_state=42         # Ensures reproducibility\n",
     ")\n",
     "\n",
-    "# Optionally, evaluate with 5-fold cross-validation on the training set.\n",
-    "cv_scores = cross_val_score(gb_clf, X_train, y_train, cv=5, scoring='accuracy')\n",
-    "print(f\"Cross-Validation Accuracy: {np.mean(cv_scores):.2f} ± {np.std(cv_scores):.2f}\")\n",
-    "\n",
     "# Train the model on the full training set.\n",
     "gb_clf.fit(X_train, y_train)\n",
     "\n",
@@ -445,6 +441,20 @@
     "val_preds = gb_clf.predict(X_val)\n",
     "val_accuracy = accuracy_score(y_val, val_preds)\n",
     "print(f\"Validation Accuracy: {val_accuracy:.2f}\")\n",
+    "\n",
+    "# Identify misclassified samples\n",
+    "misclassified_indices = np.where(y_val != val_preds)[0]\n",
+    "misclassified_samples = X_val.iloc[misclassified_indices]\n",
+    "misclassified_true_labels = y_val.iloc[misclassified_indices]\n",
+    "misclassified_pred_labels = val_preds[misclassified_indices]\n",
+    "\n",
+    "# Print misclassified samples with their true and predicted labels\n",
+    "print(\"\\nMisclassified Samples:\")\n",
+    "for i in range(len(misclassified_samples)):\n",
+    "    print(f\"Sample index: {misclassified_samples.index[i]}\")\n",
+    "    print(f\"True label: {misclassified_true_labels.iloc[i]}\")\n",
+    "    print(f\"Predicted label: {misclassified_pred_labels[i]}\")\n",
+    "    print(f\"Sample features:\\n{misclassified_samples.iloc[i]}\\n\")\n",
     "\n",
     "# If you have a test DataFrame (df_test) with an 'id' column, generate a submission file.\n",
     "if 'df_test' in globals():\n",
@@ -456,6 +466,7 @@
     "    })\n",
     "    submission.to_csv(\"submission.csv\", index=False)\n",
     "    print(\"Submission file saved as submission.csv\")\n",
+    "\n",
     "\n"
    ]
   },
