--- a/Car_Eval/main.ipynb
+++ b/Car_Eval/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "e434519c-8e4d-4e91-a55a-680e1231c177",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
     "import seaborn as sns \n",
     "from sklearn import preprocessing\n",
     "\n",
-    "\n",
+    "#read file\n",
     "df = pd.read_csv(\"car_eval_train.csv\")"
    ]
   },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "21647221",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,8 @@
    "source": [
     "names = list(df.columns.values[:-1])\n",
     "print(names)\n",
-    "    \n",
+    "\n",
+    "#identifying columns   \n",
     "for item in names:\n",
     "    uniqueVals = df[item].unique()\n",
     "    print(item+\": \")\n",
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "e290f0b2",
    "metadata": {},
    "outputs": [
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "9acdf9f8",
    "metadata": {},
    "outputs": [
@@ -372,6 +373,8 @@
     }
    ],
    "source": [
+    "#encode into numbers for model\n",
+    "\n",
     "df_en = pd.get_dummies(df, columns=names, drop_first=True)\n",
     "df_en = df_en.replace({True: 1, False: 0})\n",
     "class_mapping = {\"unacc\": 0,\n",
@@ -398,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 40,
    "id": "d86d3b80-a73e-4649-a93a-a22ae9b66243",
    "metadata": {},
    "outputs": [
@@ -406,14 +409,160 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cross-Validation Accuracy: 0.98 ± 0.01\n",
-      "Validation Accuracy: 0.97\n"
+      "Validation Accuracy: 0.97\n",
+      "\n",
+      "Misclassified Samples:\n",
+      "Sample index: 192\n",
+      "True label: 3\n",
+      "Predicted label: 2\n",
+      "Sample features:\n",
+      "buying_low        1\n",
+      "buying_med        0\n",
+      "buying_vhigh      0\n",
+      "maint_low         0\n",
+      "maint_med         1\n",
+      "maint_vhigh       0\n",
+      "doors_3           0\n",
+      "doors_4           1\n",
+      "doors_5more       0\n",
+      "persons_4         1\n",
+      "persons_more      0\n",
+      "lug_boot_med      1\n",
+      "lug_boot_small    0\n",
+      "safety_low        0\n",
+      "safety_med        0\n",
+      "Name: 192, dtype: int64\n",
+      "\n",
+      "Sample index: 477\n",
+      "True label: 0\n",
+      "Predicted label: 2\n",
+      "Sample features:\n",
+      "buying_low        1\n",
+      "buying_med        0\n",
+      "buying_vhigh      0\n",
+      "maint_low         0\n",
+      "maint_med         1\n",
+      "maint_vhigh       0\n",
+      "doors_3           0\n",
+      "doors_4           0\n",
+      "doors_5more       0\n",
+      "persons_4         0\n",
+      "persons_more      1\n",
+      "lug_boot_med      0\n",
+      "lug_boot_small    1\n",
+      "safety_low        0\n",
+      "safety_med        0\n",
+      "Name: 477, dtype: int64\n",
+      "\n",
+      "Sample index: 425\n",
+      "True label: 0\n",
+      "Predicted label: 1\n",
+      "Sample features:\n",
+      "buying_low        0\n",
+      "buying_med        0\n",
+      "buying_vhigh      1\n",
+      "maint_low         0\n",
+      "maint_med         0\n",
+      "maint_vhigh       0\n",
+      "doors_3           1\n",
+      "doors_4           0\n",
+      "doors_5more       0\n",
+      "persons_4         0\n",
+      "persons_more      1\n",
+      "lug_boot_med      0\n",
+      "lug_boot_small    0\n",
+      "safety_low        0\n",
+      "safety_med        1\n",
+      "Name: 425, dtype: int64\n",
+      "\n",
+      "Sample index: 754\n",
+      "True label: 2\n",
+      "Predicted label: 1\n",
+      "Sample features:\n",
+      "buying_low        1\n",
+      "buying_med        0\n",
+      "buying_vhigh      0\n",
+      "maint_low         1\n",
+      "maint_med         0\n",
+      "maint_vhigh       0\n",
+      "doors_3           1\n",
+      "doors_4           0\n",
+      "doors_5more       0\n",
+      "persons_4         0\n",
+      "persons_more      1\n",
+      "lug_boot_med      1\n",
+      "lug_boot_small    0\n",
+      "safety_low        0\n",
+      "safety_med        1\n",
+      "Name: 754, dtype: int64\n",
+      "\n",
+      "Sample index: 168\n",
+      "True label: 0\n",
+      "Predicted label: 2\n",
+      "Sample features:\n",
+      "buying_low        1\n",
+      "buying_med        0\n",
+      "buying_vhigh      0\n",
+      "maint_low         1\n",
+      "maint_med         0\n",
+      "maint_vhigh       0\n",
+      "doors_3           0\n",
+      "doors_4           0\n",
+      "doors_5more       0\n",
+      "persons_4         0\n",
+      "persons_more      1\n",
+      "lug_boot_med      0\n",
+      "lug_boot_small    1\n",
+      "safety_low        0\n",
+      "safety_med        0\n",
+      "Name: 168, dtype: int64\n",
+      "\n",
+      "Sample index: 695\n",
+      "True label: 3\n",
+      "Predicted label: 2\n",
+      "Sample features:\n",
+      "buying_low        0\n",
+      "buying_med        1\n",
+      "buying_vhigh      0\n",
+      "maint_low         1\n",
+      "maint_med         0\n",
+      "maint_vhigh       0\n",
+      "doors_3           0\n",
+      "doors_4           1\n",
+      "doors_5more       0\n",
+      "persons_4         1\n",
+      "persons_more      0\n",
+      "lug_boot_med      1\n",
+      "lug_boot_small    0\n",
+      "safety_low        0\n",
+      "safety_med        0\n",
+      "Name: 695, dtype: int64\n",
+      "\n",
+      "Sample index: 654\n",
+      "True label: 3\n",
+      "Predicted label: 1\n",
+      "Sample features:\n",
+      "buying_low        0\n",
+      "buying_med        1\n",
+      "buying_vhigh      0\n",
+      "maint_low         0\n",
+      "maint_med         1\n",
+      "maint_vhigh       0\n",
+      "doors_3           0\n",
+      "doors_4           1\n",
+      "doors_5more       0\n",
+      "persons_4         1\n",
+      "persons_more      0\n",
+      "lug_boot_med      1\n",
+      "lug_boot_small    0\n",
+      "safety_low        0\n",
+      "safety_med        0\n",
+      "Name: 654, dtype: int64\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
     "from sklearn.model_selection import train_test_split, cross_val_score\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix\n",
