--- a/Car_Eval/main.ipynb
+++ b/Car_Eval/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e434519c-8e4d-4e91-a55a-680e1231c177",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "15ad0ceb",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
        "4  vhigh   low      3       2    small   high  unacc"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "21647221",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e290f0b2",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9acdf9f8",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/9p/37r_bxzx43lbmnmjw0dvtfx00000gn/T/ipykernel_90902/481273140.py:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/9p/37r_bxzx43lbmnmjw0dvtfx00000gn/T/ipykernel_96040/609437354.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df_en = df_en.replace({True: 1, False: 0})\n"
      ]
     },
@@ -367,7 +367,7 @@
        "4               1           0           0      0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "id": "d86d3b80-a73e-4649-a93a-a22ae9b66243",
    "metadata": {},
    "outputs": [
@@ -409,163 +409,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Accuracy: 0.97\n",
-      "\n",
-      "Misclassified Samples:\n",
-      "Sample index: 192\n",
-      "True label: 3\n",
-      "Predicted label: 2\n",
-      "Sample features:\n",
-      "buying_low        1\n",
-      "buying_med        0\n",
-      "buying_vhigh      0\n",
-      "maint_low         0\n",
-      "maint_med         1\n",
-      "maint_vhigh       0\n",
-      "doors_3           0\n",
-      "doors_4           1\n",
-      "doors_5more       0\n",
-      "persons_4         1\n",
-      "persons_more      0\n",
-      "lug_boot_med      1\n",
-      "lug_boot_small    0\n",
-      "safety_low        0\n",
-      "safety_med        0\n",
-      "Name: 192, dtype: int64\n",
-      "\n",
-      "Sample index: 477\n",
-      "True label: 0\n",
-      "Predicted label: 2\n",
-      "Sample features:\n",
-      "buying_low        1\n",
-      "buying_med        0\n",
-      "buying_vhigh      0\n",
-      "maint_low         0\n",
-      "maint_med         1\n",
-      "maint_vhigh       0\n",
-      "doors_3           0\n",
-      "doors_4           0\n",
-      "doors_5more       0\n",
-      "persons_4         0\n",
-      "persons_more      1\n",
-      "lug_boot_med      0\n",
-      "lug_boot_small    1\n",
-      "safety_low        0\n",
-      "safety_med        0\n",
-      "Name: 477, dtype: int64\n",
-      "\n",
-      "Sample index: 425\n",
-      "True label: 0\n",
-      "Predicted label: 1\n",
-      "Sample features:\n",
-      "buying_low        0\n",
-      "buying_med        0\n",
-      "buying_vhigh      1\n",
-      "maint_low         0\n",
-      "maint_med         0\n",
-      "maint_vhigh       0\n",
-      "doors_3           1\n",
-      "doors_4           0\n",
-      "doors_5more       0\n",
-      "persons_4         0\n",
-      "persons_more      1\n",
-      "lug_boot_med      0\n",
-      "lug_boot_small    0\n",
-      "safety_low        0\n",
-      "safety_med        1\n",
-      "Name: 425, dtype: int64\n",
-      "\n",
-      "Sample index: 754\n",
-      "True label: 2\n",
-      "Predicted label: 1\n",
-      "Sample features:\n",
-      "buying_low        1\n",
-      "buying_med        0\n",
-      "buying_vhigh      0\n",
-      "maint_low         1\n",
-      "maint_med         0\n",
-      "maint_vhigh       0\n",
-      "doors_3           1\n",
-      "doors_4           0\n",
-      "doors_5more       0\n",
-      "persons_4         0\n",
-      "persons_more      1\n",
-      "lug_boot_med      1\n",
-      "lug_boot_small    0\n",
-      "safety_low        0\n",
-      "safety_med        1\n",
-      "Name: 754, dtype: int64\n",
-      "\n",
-      "Sample index: 168\n",
-      "True label: 0\n",
-      "Predicted label: 2\n",
-      "Sample features:\n",
-      "buying_low        1\n",
-      "buying_med        0\n",
-      "buying_vhigh      0\n",
-      "maint_low         1\n",
-      "maint_med         0\n",
-      "maint_vhigh       0\n",
-      "doors_3           0\n",
-      "doors_4           0\n",
-      "doors_5more       0\n",
-      "persons_4         0\n",
-      "persons_more      1\n",
-      "lug_boot_med      0\n",
-      "lug_boot_small    1\n",
-      "safety_low        0\n",
-      "safety_med        0\n",
-      "Name: 168, dtype: int64\n",
-      "\n",
-      "Sample index: 695\n",
-      "True label: 3\n",
-      "Predicted label: 2\n",
-      "Sample features:\n",
-      "buying_low        0\n",
-      "buying_med        1\n",
-      "buying_vhigh      0\n",
-      "maint_low         1\n",
-      "maint_med         0\n",
-      "maint_vhigh       0\n",
-      "doors_3           0\n",
-      "doors_4           1\n",
-      "doors_5more       0\n",
-      "persons_4         1\n",
-      "persons_more      0\n",
-      "lug_boot_med      1\n",
-      "lug_boot_small    0\n",
-      "safety_low        0\n",
-      "safety_med        0\n",
-      "Name: 695, dtype: int64\n",
-      "\n",
-      "Sample index: 654\n",
-      "True label: 3\n",
-      "Predicted label: 1\n",
-      "Sample features:\n",
-      "buying_low        0\n",
-      "buying_med        1\n",
-      "buying_vhigh      0\n",
-      "maint_low         0\n",
-      "maint_med         1\n",
-      "maint_vhigh       0\n",
-      "doors_3           0\n",
-      "doors_4           1\n",
-      "doors_5more       0\n",
-      "persons_4         1\n",
-      "persons_more      0\n",
-      "lug_boot_med      1\n",
-      "lug_boot_small    0\n",
-      "safety_low        0\n",
-      "safety_med        0\n",
-      "Name: 654, dtype: int64\n",
-      "\n"
+      "Validation Accuracy: 0.99\n"
      ]
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "from sklearn.model_selection import train_test_split, cross_val_score\n",
-    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
     "# Assume df_en is your one-hot encoded DataFrame with a 'class' target column.\n",
     "X = df_en.drop(columns=[\"class\"])  # Features\n",
@@ -574,49 +427,32 @@
     "# Split data into training and validation sets (80% train, 20% validation)\n",
     "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Initialize the Gradient Boosting Classifier with the best-found hyperparameters.\n",
-    "gb_clf = GradientBoostingClassifier(\n",
-    "    n_estimators=700,       # Number of boosting stages\n",
-    "    learning_rate=0.1,      # Step size shrinkage\n",
-    "    max_depth=3,            # Maximum depth of individual estimators\n",
-    "    subsample=0.9,          # Fraction of samples used for fitting each base learner\n",
-    "    random_state=42         # Ensures reproducibility\n",
+    "# Initialize the Gradient Boosting Classifier with the best parameters\n",
+    "best_gb_clf = GradientBoostingClassifier(\n",
+    "    learning_rate=0.2,\n",
+    "    max_depth=3,\n",
+    "    n_estimators=700,\n",
+    "    subsample=1.0,\n",
+    "    random_state=42\n",
     ")\n",
     "\n",
-    "# Train the model on the full training set.\n",
-    "gb_clf.fit(X_train, y_train)\n",
+    "# Train the best model\n",
+    "best_gb_clf.fit(X_train, y_train)\n",
     "\n",
-    "# Evaluate the model on the validation set.\n",
-    "val_preds = gb_clf.predict(X_val)\n",
+    "# Evaluate the model on the validation set\n",
+    "val_preds = best_gb_clf.predict(X_val)\n",
     "val_accuracy = accuracy_score(y_val, val_preds)\n",
     "print(f\"Validation Accuracy: {val_accuracy:.2f}\")\n",
     "\n",
-    "# Identify misclassified samples\n",
-    "misclassified_indices = np.where(y_val != val_preds)[0]\n",
-    "misclassified_samples = X_val.iloc[misclassified_indices]\n",
-    "misclassified_true_labels = y_val.iloc[misclassified_indices]\n",
-    "misclassified_pred_labels = val_preds[misclassified_indices]\n",
-    "\n",
-    "# Print misclassified samples with their true and predicted labels\n",
-    "print(\"\\nMisclassified Samples:\")\n",
-    "for i in range(len(misclassified_samples)):\n",
-    "    print(f\"Sample index: {misclassified_samples.index[i]}\")\n",
-    "    print(f\"True label: {misclassified_true_labels.iloc[i]}\")\n",
-    "    print(f\"Predicted label: {misclassified_pred_labels[i]}\")\n",
-    "    print(f\"Sample features:\\n{misclassified_samples.iloc[i]}\\n\")\n",
-    "\n",
     "# If you have a test DataFrame (df_test) with an 'id' column, generate a submission file.\n",
     "if 'df_test' in globals():\n",
-    "    # Ensure df_test is preprocessed similarly to df_en.\n",
-    "    test_preds = gb_clf.predict(df_test.drop(columns=[\"id\"]))\n",
+    "    test_preds = best_gb_clf.predict(df_test.drop(columns=[\"id\"]))\n",
     "    submission = pd.DataFrame({\n",
     "        \"id\": df_test[\"id\"],\n",
     "        \"class\": test_preds\n",
     "    })\n",
     "    submission.to_csv(\"submission.csv\", index=False)\n",
-    "    print(\"Submission file saved as submission.csv\")\n",
-    "\n",
-    "\n"
+    "    print(\"Submission file saved as submission.csv\")"
    ]
   },
   {
