--- a/Car_Eval/main.ipynb
+++ b/Car_Eval/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "id": "e434519c-8e4d-4e91-a55a-680e1231c177",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "id": "15ad0ceb",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
        "4  vhigh   low      3       2    small   high  unacc"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "id": "21647221",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "id": "e290f0b2",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "id": "9acdf9f8",
    "metadata": {},
    "outputs": [
@@ -367,7 +367,7 @@
        "4               1           0           0      0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,31 +401,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "d86d3b80-a73e-4649-a93a-a22ae9b66243",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation Accuracy: 0.99\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "# Assume df_en is your one-hot encoded DataFrame with a 'class' target column.\n",
     "X = df_en.drop(columns=[\"class\"])  # Features\n",
     "y = df_en[\"class\"]                 # Target\n",
-    "\n",
-    "# Split data into training and validation sets (80% train, 20% validation)\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# Initialize the Gradient Boosting Classifier with the best parameters\n",
     "best_gb_clf = GradientBoostingClassifier(\n",
@@ -436,23 +424,29 @@
     "    random_state=42\n",
     ")\n",
     "\n",
-    "# Train the best model\n",
-    "best_gb_clf.fit(X_train, y_train)\n",
+    "# Train the model on the entire dataset\n",
+    "best_gb_clf.fit(X, y)\n",
     "\n",
-    "# Evaluate the model on the validation set\n",
-    "val_preds = best_gb_clf.predict(X_val)\n",
-    "val_accuracy = accuracy_score(y_val, val_preds)\n",
-    "print(f\"Validation Accuracy: {val_accuracy:.2f}\")\n",
-    "\n",
-    "# If you have a test DataFrame (df_test) with an 'id' column, generate a submission file.\n",
+    "# If you have a test DataFrame (df_test) with an 'id' column and 'class' column for evaluation\n",
     "if 'df_test' in globals():\n",
-    "    test_preds = best_gb_clf.predict(df_test.drop(columns=[\"id\"]))\n",
+    "    X_test = df_test.drop(columns=[\"id\"])  # Assuming the test data doesn't have the 'class' column\n",
+    "    y_test = df_test[\"class\"]              # Assuming the test data has the 'class' column for evaluation\n",
+    "    \n",
+    "    # Predict on the test data\n",
+    "    test_preds = best_gb_clf.predict(X_test)\n",
+    "    \n",
+    "    # Calculate accuracy on the test set\n",
+    "    test_accuracy = accuracy_score(y_test, test_preds)\n",
+    "    print(f\"Test Accuracy: {test_accuracy:.2f}\")\n",
+    "    \n",
+    "    # Create a submission file\n",
     "    submission = pd.DataFrame({\n",
     "        \"id\": df_test[\"id\"],\n",
     "        \"class\": test_preds\n",
     "    })\n",
+    "    \n",
     "    submission.to_csv(\"submission.csv\", index=False)\n",
-    "    print(\"Submission file saved as submission.csv\")"
+    "    print(\"Submission file saved as submission.csv\")\n"
    ]
   },
   {
