--- a/Car_Eval/main.ipynb
+++ b/Car_Eval/main.ipynb
@@ -458,6 +458,78 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c2c3a6e5-03a1-4e5b-a9e0-31f39f5748ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV, cross_val_score\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Assume df_en is your one-hot encoded DataFrame with a 'class' target column.\n",
+    "X = df_en.drop(columns=[\"class\"])  # Features\n",
+    "y = df_en[\"class\"]                 # Target\n",
+    "\n",
+    "# Split data into training and validation sets (80% train, 20% validation)\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Define a parameter grid for tuning:\n",
+    "param_grid = {\n",
+    "    'n_estimators': [300, 500, 700],      # Number of trees\n",
+    "    'learning_rate': [0.01, 0.05, 0.1],     # Contribution of each tree\n",
+    "    'max_depth': [3, 5, 7],                 # Maximum depth of each tree\n",
+    "    'subsample': [0.8, 0.9, 1.0]            # Fraction of samples for fitting individual trees\n",
+    "}\n",
+    "\n",
+    "# Initialize the Gradient Boosting Classifier with a fixed random_state for reproducibility.\n",
+    "gb_clf = GradientBoostingClassifier(random_state=42)\n",
+    "\n",
+    "# Use GridSearchCV to search for the best parameter combination.\n",
+    "grid_search = GridSearchCV(\n",
+    "    estimator=gb_clf,\n",
+    "    param_grid=param_grid,\n",
+    "    cv=5,                    # 5-fold cross-validation\n",
+    "    scoring='accuracy',\n",
+    "    n_jobs=-1,\n",
+    "    verbose=2\n",
+    ")\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Best parameters found:\", grid_search.best_params_)\n",
+    "\n",
+    "# Retrieve the best estimator from grid search.\n",
+    "best_gb_clf = grid_search.best_estimator_\n",
+    "\n",
+    "# Optionally, evaluate with 5-fold cross-validation on the training set.\n",
+    "cv_scores = cross_val_score(best_gb_clf, X_train, y_train, cv=5, scoring='accuracy')\n",
+    "print(f\"Cross-Validation Accuracy: {np.mean(cv_scores):.2f} ± {np.std(cv_scores):.2f}\")\n",
+    "\n",
+    "# Train the best model on the full training set.\n",
+    "best_gb_clf.fit(X_train, y_train)\n",
+    "\n",
+    "# Evaluate the model on the validation set.\n",
+    "val_preds = best_gb_clf.predict(X_val)\n",
+    "val_accuracy = accuracy_score(y_val, val_preds)\n",
+    "print(f\"Validation Accuracy: {val_accuracy:.2f}\")\n",
+    "\n",
+    "# If you have a test DataFrame (df_test) with an 'id' column, generate a submission file.\n",
+    "if 'df_test' in globals():\n",
+    "    # Make sure df_test is preprocessed in the same way as df_en.\n",
+    "    test_preds = best_gb_clf.predict(df_test.drop(columns=[\"id\"]))\n",
+    "    submission = pd.DataFrame({\n",
+    "        \"id\": df_test[\"id\"],\n",
+    "        \"class\": test_preds\n",
+    "    })\n",
+    "    submission.to_csv(\"submission.csv\", index=False)\n",
+    "    print(\"Submission file saved as submission.csv\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4095fb18-9248-4533-aca2-12fe2d1b4c72",
    "metadata": {},
    "outputs": [],
