--- a/Car_Eval/main.ipynb
+++ b/Car_Eval/main.ipynb
@@ -473,6 +473,7 @@
     }
    ],
    "source": [
+    "# DO NOT USE THIS HAS 70% ACCURACY\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
@@ -520,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "id": "c2c3a6e5-03a1-4e5b-a9e0-31f39f5748ed",
    "metadata": {},
    "outputs": [
